<resources>
    <string name="app_name">Meem</string>
    <string name="e_mail">E-mail</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="login_failed">Login Failed</string>
    <string name="enter_email">Please enter your email</string>
    <string name="enter_password">Please enter your password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="full_name">Full Name</string>
    <string name="enter_full_name">Please enter your full name</string>
    <string name="confirm_your_password">Pleas confirm your password</string>
    <string name="password_mismatch">Password mismatch</string>
    <string name="enter_you_phone_number">Pleas enter your phone number</string>
    <string name="weak_password">Password is weak, please enter a strong password</string>
    <string name="invalid_credential">Invalid credential</string>
    <string name="user_exists">User already exists please enter another email</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="add_service">Add Service</string>
    <string name="service_name_en">Service Name (En)</string>
    <string name="service_name_ar">Service Name (Ar)</string>
    <string name="invalid_qr_code">Invalid QR Code</string>
    <string name="request_added">Your request has been added</string>
    <string name="my_requests">My Requests</string>
    <string name="date">Date:</string>
    <string name="time">Time:</string>
    <string name="area">Area:</string>
    <string name="status">Status:</string>
    <string name="pending">Pending</string>
    <string name="service">Service:</string>
    <string name="services">Services</string>
    <string name="logout">Logout</string>
    <string name="phone_number">Phone Number</string>
    <string name="not_registered_sign_up_here">Not Registered? Sign up here</string>
    <string name="register">Register</string>
    <string name="accept">Accept</string>
    <string name="view_details">View Details</string>
    <string name="title_activity_volunteer">VolunteerActivity</string>
    <string name="logging_in">Logging in...</string>
    <string name="requests">Requests</string>
    <string name="registration">Registration</string>
    <string name="accepted_requests">Accepted Requests</string>
    <string name="accepted_by">Accepted By:</string>
    <string name="accepted">Accepted</string>
</resources>
