<?xml version="1.0" encoding="utf-8"?>
<com.github.captain_miao.optroundcardview.OptRoundCardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:optRoundCardBackgroundColor="@android:color/white"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginStart="16dp"
    android:layout_marginEnd="16dp"
    android:layout_marginBottom="8dp"
    android:elevation="3dp"
    android:layout_marginTop="8dp"
    app:optRoundCardElevation="3dp"
    app:optRoundCardCornerRadius="8dp"
    app:optRoundCardBottomEdges="true"
    app:optRoundCardTopEdges="true">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <com.github.captain_miao.optroundcardview.OptRoundCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:optRoundCardElevation="3dp"
            android:elevation="3dp"
            app:optRoundCardCornerRadius="8dp"
            app:optRoundCardBottomEdges="false"
            app:optRoundCardLeftBottomCorner="false"
            app:optRoundCardRightBottomCorner="false"
            app:optRoundCardBackgroundColor="@color/colorPrimary"
            app:optRoundCardTopEdges="true"
            android:id="@+id/cvParent">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/white"
                    android:text="@string/date"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:layout_marginStart="10dp"
                    android:id="@+id/tvDate"/>
            </LinearLayout>
        </com.github.captain_miao.optroundcardview.OptRoundCardView>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvTime"
            android:layout_marginTop="8dp"
            android:text="@string/time"
            android:textSize="16sp"
            android:layout_marginStart="10dp"
            android:layout_below="@+id/cvParent"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvService"
            android:layout_below="@+id/tvTime"
            android:layout_marginStart="10dp"
            android:textSize="16sp"
            android:layout_marginTop="8dp"
            android:text="@string/service"/>
        <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvArea"
        android:layout_below="@+id/tvService"
        android:layout_marginStart="10dp"
        android:textSize="16sp"
        android:layout_marginTop="8dp"
        android:text="@string/area"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvAcceptedBy"
            android:layout_below="@+id/tvArea"
            android:layout_marginStart="10dp"
            android:textSize="16sp"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/accepted_by"/>

    </RelativeLayout>
</com.github.captain_miao.optroundcardview.OptRoundCardView>