<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_meem">
    <ImageView
        android:layout_width="@dimen/_250sdp"
        android:layout_height="@dimen/_250sdp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="24dp"
        android:layout_above="@+id/cv"
        android:src="@drawable/ic_new_logo_trans"/>
    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:id="@+id/cv"
        app:cardElevation="3dp"
        app:cardCornerRadius="8dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:id="@+id/etEmail"
                android:inputType="textEmailAddress"
                android:hint="@string/e_mail"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:id="@+id/etPassword"
                android:inputType="textPassword"
                android:hint="@string/password"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/mybutton"
                android:textColor="@android:color/white"
                android:layout_marginTop="16dp"
                android:layout_marginStart="48dp"
                android:layout_marginEnd="48dp"
                android:layout_marginBottom="8dp"
                android:onClick="login"
                android:text="@string/login"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/not_registered_sign_up_here"
                android:layout_gravity="center"
                android:layout_marginBottom="16dp"
                android:textColor="@color/colorPrimaryDark"
                android:id="@+id/tvRegister"/>
        </LinearLayout>
    </android.support.v7.widget.CardView>
</RelativeLayout>