<?xml version="1.0" encoding="utf-8"?>
<com.github.captain_miao.optroundcardview.OptRoundCardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:optRoundCardBackgroundColor="@android:color/white"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginStart="16dp"
    android:layout_marginEnd="16dp"
    android:layout_marginBottom="8dp"
    android:elevation="3dp"
    android:layout_marginTop="8dp"
    app:optRoundCardElevation="3dp"
    app:optRoundCardCornerRadius="8dp"
    app:optRoundCardBottomEdges="true"
    app:optRoundCardTopEdges="true">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <com.github.captain_miao.optroundcardview.OptRoundCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:optRoundCardElevation="3dp"
            android:elevation="3dp"
            app:optRoundCardCornerRadius="8dp"
            app:optRoundCardBottomEdges="false"
            app:optRoundCardLeftBottomCorner="false"
            app:optRoundCardRightBottomCorner="false"
            app:optRoundCardBackgroundColor="@color/colorPrimary"
            app:optRoundCardTopEdges="true"
            android:id="@+id/cvParent_volunteer">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/white"
                    android:text="@string/date"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:layout_marginStart="10dp"
                    android:id="@+id/tvDate_volunteer"/>
            </LinearLayout>
        </com.github.captain_miao.optroundcardview.OptRoundCardView>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvTime_volunteer"
            android:layout_marginTop="8dp"
            android:text="@string/time"
            android:textSize="16sp"
            android:layout_marginStart="10dp"
            android:layout_below="@+id/cvParent_volunteer"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvService_volunteer"
            android:layout_below="@+id/tvTime_volunteer"
            android:layout_marginStart="10dp"
            android:textSize="16sp"
            android:layout_marginTop="8dp"
            android:text="@string/service"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvArea_volunteer"
            android:layout_below="@+id/tvService_volunteer"
            android:layout_marginStart="10dp"
            android:textSize="16sp"
            android:layout_marginTop="8dp"
            android:text="@string/area"/>
        <!--<TextView-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_below="@+id/tvArea_volunteer"-->
            <!--android:text="@string/status"-->
            <!--android:textSize="16sp"-->
            <!--android:id="@+id/tvStatus_volunteer"-->
            <!--android:layout_marginBottom="10dp"-->
            <!--android:layout_marginStart="10dp"-->
            <!--android:layout_marginTop="8dp"/>-->
        <!--<TextView-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_below="@+id/tvArea_volunteer"-->
            <!--android:text="@string/pending"-->
            <!--android:textColor="@color/colorPrimaryDark"-->
            <!--android:layout_toEndOf="@+id/tvStatus_volunteer"-->
            <!--android:id="@+id/tvStatusData_volunteer"-->
            <!--android:textSize="16sp"-->
            <!--android:layout_marginStart="10dp"-->
            <!--android:layout_marginTop="8dp"/>-->
        <android.support.design.internal.BaselineLayout
            android:layout_width="match_parent"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="10dp"
            android:layout_height="1dp"
            android:id="@+id/baseline"
            android:layout_below="@+id/tvArea_volunteer"
            android:background="@color/colorPrimary"></android.support.design.internal.BaselineLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="1dp"
            android:layout_below="@+id/baseline">
            <Button
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/accept"
                android:layout_marginEnd="5dp"
                android:layout_marginStart="5dp"
                android:id="@+id/btnAccept"
                android:textColor="@color/colorPrimaryDark"
                android:background="@android:color/transparent"/>
            <Button
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:layout_height="wrap_content"
                android:text="@string/view_details"
                android:id="@+id/btnViewDetails"
                android:textColor="@color/colorPrimaryDark"
                android:background="@android:color/transparent"/>
        </LinearLayout>


    </RelativeLayout>
</com.github.captain_miao.optroundcardview.OptRoundCardView>